# zbm_install_script_prealpha_garbage_gl

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICK_REFERENCE.md  README.md  README_RUST.md  RUST_REWRITE_SUMMARY.md  build.rs  zbm-notcurses.sh  zbm_install.sh
examples/: dry_run.sh  existing_system.sh  mirror.sh  raidz1.sh  single_drive.sh
lib/: bootloader.sh  common.sh  device_tuning.sh  disk.sh  network_zap.sh  system.sh  zfs.sh
src/: config.rs  error.rs  lib.rs  main.rs  validation.rs
src/bootloader/: mod.rs  systemd_boot.rs  zbm.rs
src/disk/: block_device.rs  discovery.rs  mod.rs  operations.rs
src/system/: distro.rs  mod.rs  packages.rs
src/ui/: context.rs  mod.rs  runner.rs  screens.rs  widgets.rs
src/zfs/: dataset.rs  mod.rs  pool.rs
tui/python/: notcurses_components.py  notcurses_ui.py
