[package]
name = "zbm-installer"
version = "0.1.0"
edition = "2021"
authors = ["Grand-Tetons-Inc"]
description = "ZFSBootMenu installer with Notcurses TUI"
license = "MIT"
repository = "https://github.com/Grand-Tetons-Inc/zbm_install_script_prealpha_garbage"
readme = "README.md"
keywords = ["zfs", "installer", "tui", "zfsbootmenu"]
categories = ["command-line-utilities"]

[dependencies]
# UI (optional - TUI implementation is incomplete)
libnotcurses-sys = { version = "3.10", optional = true }

# System
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mount", "ioctl", "process", "user"] }
udev = "0.8"
inotify = "0.10"

# CLI & Config
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
regex = "1.11"
bytesize = { version = "1.3", features = ["serde"] }
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
mockall = "0.13"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["tui"]
tui = ["libnotcurses-sys"]

[[bin]]
name = "zbm-installer"
path = "src/main.rs"
